--- a/.github/workflows/docker-publish.yaml
+++ b/.github/workflows/docker-publish.yaml
@@ -14,17 +14,16 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Log in to GitHub Container Registry
-        uses: docker/login-action@v2
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
         with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          username: ${{ vars.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build Docker image
         run: |
-          docker build -t ghcr.io/anycontext-ai/thingsboard-mcp-server:latest .
+          docker build -t apachler/thingsboard-mcp-server:latest .
 
       - name: Push Docker image
         run: |
-          docker push ghcr.io/anycontext-ai/thingsboard-mcp-server:latest
+          docker push apachler/thingsboard-mcp-server:latest
